[package]
name = "driver"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-pc-windows-msvc"

rustflags = [
        # Pre Link Args
        "-Z", "pre-link-arg=/NOLOGO",
        "-Z", "pre-link-arg=/NXCOMPAT",
        "-Z", "pre-link-arg=/NODEFAULTLIB",
        "-Z", "pre-link-arg=/SUBSYSTEM:NATIVE",
        "-Z", "pre-link-arg=/DRIVER",
        "-Z", "pre-link-arg=/DYNAMICBASE",
        "-Z", "pre-link-arg=/MANIFEST:NO",

        # Post Link Args
        "-C", "link-arg=/OPT:REF,ICF",
        "-C", "link-arg=/ENTRY:driver_entry",
        "-C", "link-arg=/MERGE:.edata=.rdata",
        "-C", "link-arg=/MERGE:.rustc=.data",
        "-C", "link-arg=/INTEGRITYCHECK",
]
[dependencies]
